[gd_scene load_steps=2 format=3 uid="uid://5ykig0sr214j"]

[ext_resource type="Script" path="res://utility/hurt_box.gd" id="1_3ugrt"]

[node name="HurtBox" type="Area2D"]
script = ExtResource("1_3ugrt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableHurtBoxTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DisableHurtBoxTimer" to="." method="_on_disable_hurt_box_timer_timeout"]
